[package]
name = "algo"
version = "0.1.1"
authors = ["Aleksandr Pak <alekspak@icloud.com>"]

description = "Algorithms & Data Structure implementations"
repository = "https://github.com/aleksandrpak/algo"

license = "MIT"

readme = "README.md"

keywords = ["algorithm"]

exclude = [
    ".travis.yml",
]
